--- a/src/components/meta/Head.astro
+++ b/src/components/meta/Head.astro
@@ -184,7 +184,7 @@ const canonicalUrl = getCanonicalUrl(Astro.url.pathname)
         },
       ],
       preload: true,
-      display: 'swap',
+      display: 'block',
       selector: 'body',
       fallback: 'sans-serif',
     },
