--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import Breadcrumbs from '@/components/Breadcrumbs.astro'
 import Button from '@/components/Button.astro'
-import ColorModeButton from '@/components/ColorModeButton.astro'
+// import ColorModeButton from '@/components/ColorModeButton.astro'
 import Container from '@/components/layout/Container.astro'
 import Link from '@/components/Link.astro'
 import { SITE } from '@/consts'
@@ -29,7 +29,7 @@ import { Icon } from 'astro-icon/components'
           </Link>
         </div>
         <div class="button-group flex items-center gap-2 min-w-[4.4rem]">
-          <ColorModeButton />
+          <!-- <ColorModeButton /> -->
           <div
             id="back-to-top-wrapper"
             transition:persist
