--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -35,13 +35,15 @@ const isHomePage = Astro.url.pathname === '/'
     <Icon
       slot="separator"
       name="solar:forward-linear"
-      class="w-3 h-3 text-base-content/50"
+      class="text-base-content transition-all duration-200"
       aria-hidden="true"
+      size="1.25rem"
     />
     <Icon
       slot="index"
-      name="solar:home-2-linear"
-      class="w-3 h-3"
+      name="solar:home-2-outline"
+      class="stroke-[5] text-base-content hover:underline decoration-primary/50 hover:decoration-2 hover:text-primary transition-all duration-200"
+      size="0.85rem"
       aria-label="Home"
     />
   </AstroBreadcrumbs>
@@ -70,19 +72,23 @@ document.addEventListener('astro:after-swap', updateBreadcrumbs)
 <style>
   /* minimal breadcrumb styles for footer */
   :global(.c-breadcrumbs) {
-    @apply text-xs text-base-content/75;
+    @apply text-xs text-base-content;
   }
 
   :global(.c-breadcrumbs__link) {
-    @apply text-primary/75 transition-colors duration-200;
+    @apply text-base-content underline decoration-primary/50 hover:text-primary decoration-2 transition-colors duration-200 relative;
+  }
+
+  :global(.c-breadcrumbs__link) {
+    @apply after:absolute after:left-0 after:bottom-0 after:w-full after:h-px after:bg-primary after:opacity-0 after:transition-opacity after:duration-200;
   }
 
   :global(.c-breadcrumbs__link:hover) {
-    @apply text-primary;
+    @apply text-primary after:opacity-100;
   }
 
   :global(.c-breadcrumbs__crumb:last-child) {
-    @apply text-base-content/50;
+    @apply text-base-content;
   }
 
   :global(.c-breadcrumbs__truncated-button) {
