--- a/src/components/meta/Head.astro
+++ b/src/components/meta/Head.astro
@@ -97,13 +97,13 @@ const canonicalUrl = getCanonicalUrl(Astro.url.pathname)
       {
         rel: 'icon',
         type: 'image/svg+xml',
-        href: '/favicon-light.svg',
+        href: '/favicon-dark.svg',
         media: '(prefers-color-scheme: light)',
       },
       {
         rel: 'icon',
         type: 'image/x-icon',
-        href: '/favicon-light.svg',
+        href: '/favicon-dark.svg',
       },
       {
         rel: 'alternate',
