fixed divider style 2

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -45,7 +45,7 @@ const years = Object.keys(posts).sort((a, b) => Number.parseInt(b) - Number.pars
       <div class="space-y-4">
         {years.map(year => (
           <section class="animate">
-            <div class="divider divider-start text-base-content/70 divider-neutral font-medium my-8 animate">
+            <div class="divider divider-start text-base-content/75 font-medium my-8 animate">
               {year}
             </div>
             <div>
