--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -2,6 +2,7 @@
 import Container from '@/components/layout/Container.astro'
 import Subheader from '@/components/layout/Subheader.astro'
 import PostStructuredData from '@/components/meta/PostStructuredData.astro'
+import ProfilePageStructuredData from '@/components/meta/ProfilePageStructuredData.astro'
 import PageLayout from '@/layouts/PageLayout.astro'
 import { readingTime } from '@/lib/utils'
 import { type CollectionEntry, getCollection } from 'astro:content'
@@ -43,6 +44,7 @@ const tags = post.data.tags || []
     entry={post}
     type="blog"
   />
+  <ProfilePageStructuredData slot="structured-data" />
   <Container>
     <Subheader
       title={title}
