--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -4,6 +4,7 @@ import Container from '@/components/layout/Container.astro'
 import Subheader from '@/components/layout/Subheader.astro'
 import Link from '@/components/Link.astro'
 import PostStructuredData from '@/components/meta/PostStructuredData.astro'
+import ProfilePageStructuredData from '@/components/meta/ProfilePageStructuredData.astro'
 import PageLayout from '@/layouts/PageLayout.astro'
 import { readingTime } from '@/lib/utils'
 import { getCollection } from 'astro:content'
@@ -40,6 +41,7 @@ const links = project.data.links || []
     entry={project}
     type="projects"
   />
+  <ProfilePageStructuredData slot="structured-data" />
   <Container>
     <div class="my-10">
       <Subheader
