--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -2,6 +2,7 @@
 import Container from '@/components/layout/Container.astro'
 import Subheader from '@/components/layout/Subheader.astro'
 import CollectionPageStructuredData from '@/components/meta/CollectionPageStructuredData.astro'
+import ProfilePageStructuredData from '@/components/meta/ProfilePageStructuredData.astro'
 import ArrowCard from '@/components/ui/ArrowCard.astro'
 import { PROJECTS } from '@/consts'
 import PageLayout from '@/layouts/PageLayout.astro'
@@ -19,6 +20,7 @@ const projects = (await getCollection('projects'))
     name={PROJECTS.TITLE}
     description={PROJECTS.DESCRIPTION}
   />
+  <ProfilePageStructuredData slot="structured-data" />
   <Container>
     <div class="space-y-10">
       <Subheader title="Projects" subtitle="projects and experiments" />
