--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -9,7 +9,7 @@ import { SITE } from '@/consts';
   class="fixed top-0 left-0 right-0 z-50 py-4 backdrop-blur-sm bg-base-100/80"
   transition:persist
 >
-  <Container>
+  <Container as="section">
     <div class="flex flex-wrap gap-y-2 justify-between">
       <Link
         href="/"
