--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -43,7 +43,7 @@ const tags = post.data.tags || []
     entry={post}
     type="blog"
   />
-  <Container>
+  <Container as="main">
     <Subheader
       title={title}
       date={post.data.date}
