--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -40,7 +40,7 @@ const links = project.data.links || []
     entry={project}
     type="projects"
   />
-  <Container>
+  <Container as="main">
     <div class="my-10">
       <Subheader
         title={title}
