--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -41,7 +41,7 @@ const years = Object.keys(posts).sort((a, b) => Number.parseInt(b) - Number.pars
     description={BLOG.DESCRIPTION}
   />
   <ProfilePageStructuredData slot="structured-data" />
-  <Container>
+  <Container as="main">
     <div class="space-y-10">
       <Subheader title="Blog" subtitle="thoughts and ideas" />
       <div class="space-y-4">
